--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,9 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Site Title"
+title                    : "Seungmyung Lee"
 title_separator          : "-"
-name                     : "Your Name"
+name                     : "Seungmyung Lee"
 description              : "An amazing website."
 url                      : https://beabright.github.io # the base hostname & protocol for your site e.g. "https://beabright.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
