--- a/_config.yml
+++ b/_config.yml
@@ -108,10 +108,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Seungmyug Lee"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an amazing person."
-  location         : "Somewhere"
+  bio              : "Trying to figure out life."
+  location         : "Seoul, Korea"
   email            :
   links:
     - label: "Email"
